# api_02

./: et --hard HEAD@{n}  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  router.py  schema.py
tests/: test_api.py
