[project]
name = "poetry-shell"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Grecov", email = "guilherme.grecov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["taskipy (>=1.14.1,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"
